// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with some arabic character test input 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Input
    Input={
      Object {
        "value": "البلوط العظيم",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Component
          style={
            Object {
              "flex": 1,
              "fontSize": 18,
              "paddingLeft": 20,
            }
          }
        />,
        <TextInput
          allowFontScaling={true}
          autoCorrect={false}
          style={
            Object {
              "color": "#000",
              "flex": 2,
              "fontSize": 18,
              "lineHeight": 23,
              "paddingLeft": 5,
              "paddingRight": 5,
            }
          }
          underlineColorAndroid="transparent"
        />,
      ],
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "height": 40,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": undefined,
          "style": Object {
            "flex": 1,
            "fontSize": 18,
            "paddingLeft": 20,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "allowFontScaling": true,
          "autoCorrect": false,
          "onChangeText": undefined,
          "placeholder": undefined,
          "secureTextEntry": undefined,
          "style": Object {
            "color": "#000",
            "flex": 2,
            "fontSize": 18,
            "lineHeight": 23,
            "paddingLeft": 5,
            "paddingRight": 5,
          },
          "underlineColorAndroid": "transparent",
          "value": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "flex": 1,
                "fontSize": 18,
                "paddingLeft": 20,
              }
            }
          />,
          <TextInput
            allowFontScaling={true}
            autoCorrect={false}
            style={
              Object {
                "color": "#000",
                "flex": 2,
                "fontSize": 18,
                "lineHeight": 23,
                "paddingLeft": 5,
                "paddingRight": 5,
              }
            }
            underlineColorAndroid="transparent"
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "height": 40,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": undefined,
            "style": Object {
              "flex": 1,
              "fontSize": 18,
              "paddingLeft": 20,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "allowFontScaling": true,
            "autoCorrect": false,
            "onChangeText": undefined,
            "placeholder": undefined,
            "secureTextEntry": undefined,
            "style": Object {
              "color": "#000",
              "flex": 2,
              "fontSize": 18,
              "lineHeight": 23,
              "paddingLeft": 5,
              "paddingRight": 5,
            },
            "underlineColorAndroid": "transparent",
            "value": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`renders correctly with some character input with spaces 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Input
    Input={
      Object {
        "value": "The Quick Brown Fox Jumped Over the Lazy Dog",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Component
          style={
            Object {
              "flex": 1,
              "fontSize": 18,
              "paddingLeft": 20,
            }
          }
        />,
        <TextInput
          allowFontScaling={true}
          autoCorrect={false}
          style={
            Object {
              "color": "#000",
              "flex": 2,
              "fontSize": 18,
              "lineHeight": 23,
              "paddingLeft": 5,
              "paddingRight": 5,
            }
          }
          underlineColorAndroid="transparent"
        />,
      ],
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "height": 40,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": undefined,
          "style": Object {
            "flex": 1,
            "fontSize": 18,
            "paddingLeft": 20,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "allowFontScaling": true,
          "autoCorrect": false,
          "onChangeText": undefined,
          "placeholder": undefined,
          "secureTextEntry": undefined,
          "style": Object {
            "color": "#000",
            "flex": 2,
            "fontSize": 18,
            "lineHeight": 23,
            "paddingLeft": 5,
            "paddingRight": 5,
          },
          "underlineColorAndroid": "transparent",
          "value": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "flex": 1,
                "fontSize": 18,
                "paddingLeft": 20,
              }
            }
          />,
          <TextInput
            allowFontScaling={true}
            autoCorrect={false}
            style={
              Object {
                "color": "#000",
                "flex": 2,
                "fontSize": 18,
                "lineHeight": 23,
                "paddingLeft": 5,
                "paddingRight": 5,
              }
            }
            underlineColorAndroid="transparent"
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "height": 40,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": undefined,
            "style": Object {
              "flex": 1,
              "fontSize": 18,
              "paddingLeft": 20,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "allowFontScaling": true,
            "autoCorrect": false,
            "onChangeText": undefined,
            "placeholder": undefined,
            "secureTextEntry": undefined,
            "style": Object {
              "color": "#000",
              "flex": 2,
              "fontSize": 18,
              "lineHeight": 23,
              "paddingLeft": 5,
              "paddingRight": 5,
            },
            "underlineColorAndroid": "transparent",
            "value": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`renders correctly with some input with hypenated input 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Input
    Input={
      Object {
        "value": "Anne-Marie",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Component
          style={
            Object {
              "flex": 1,
              "fontSize": 18,
              "paddingLeft": 20,
            }
          }
        />,
        <TextInput
          allowFontScaling={true}
          autoCorrect={false}
          style={
            Object {
              "color": "#000",
              "flex": 2,
              "fontSize": 18,
              "lineHeight": 23,
              "paddingLeft": 5,
              "paddingRight": 5,
            }
          }
          underlineColorAndroid="transparent"
        />,
      ],
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "height": 40,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": undefined,
          "style": Object {
            "flex": 1,
            "fontSize": 18,
            "paddingLeft": 20,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "allowFontScaling": true,
          "autoCorrect": false,
          "onChangeText": undefined,
          "placeholder": undefined,
          "secureTextEntry": undefined,
          "style": Object {
            "color": "#000",
            "flex": 2,
            "fontSize": 18,
            "lineHeight": 23,
            "paddingLeft": 5,
            "paddingRight": 5,
          },
          "underlineColorAndroid": "transparent",
          "value": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "flex": 1,
                "fontSize": 18,
                "paddingLeft": 20,
              }
            }
          />,
          <TextInput
            allowFontScaling={true}
            autoCorrect={false}
            style={
              Object {
                "color": "#000",
                "flex": 2,
                "fontSize": 18,
                "lineHeight": 23,
                "paddingLeft": 5,
                "paddingRight": 5,
              }
            }
            underlineColorAndroid="transparent"
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "height": 40,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": undefined,
            "style": Object {
              "flex": 1,
              "fontSize": 18,
              "paddingLeft": 20,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "allowFontScaling": true,
            "autoCorrect": false,
            "onChangeText": undefined,
            "placeholder": undefined,
            "secureTextEntry": undefined,
            "style": Object {
              "color": "#000",
              "flex": 2,
              "fontSize": 18,
              "lineHeight": 23,
              "paddingLeft": 5,
              "paddingRight": 5,
            },
            "underlineColorAndroid": "transparent",
            "value": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`renders correctly with some input with symbol input 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Input
    Input={
      Object {
        "value": "$$@!&*(^)%%",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Component
          style={
            Object {
              "flex": 1,
              "fontSize": 18,
              "paddingLeft": 20,
            }
          }
        />,
        <TextInput
          allowFontScaling={true}
          autoCorrect={false}
          style={
            Object {
              "color": "#000",
              "flex": 2,
              "fontSize": 18,
              "lineHeight": 23,
              "paddingLeft": 5,
              "paddingRight": 5,
            }
          }
          underlineColorAndroid="transparent"
        />,
      ],
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "height": 40,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": undefined,
          "style": Object {
            "flex": 1,
            "fontSize": 18,
            "paddingLeft": 20,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "allowFontScaling": true,
          "autoCorrect": false,
          "onChangeText": undefined,
          "placeholder": undefined,
          "secureTextEntry": undefined,
          "style": Object {
            "color": "#000",
            "flex": 2,
            "fontSize": 18,
            "lineHeight": 23,
            "paddingLeft": 5,
            "paddingRight": 5,
          },
          "underlineColorAndroid": "transparent",
          "value": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "flex": 1,
                "fontSize": 18,
                "paddingLeft": 20,
              }
            }
          />,
          <TextInput
            allowFontScaling={true}
            autoCorrect={false}
            style={
              Object {
                "color": "#000",
                "flex": 2,
                "fontSize": 18,
                "lineHeight": 23,
                "paddingLeft": 5,
                "paddingRight": 5,
              }
            }
            underlineColorAndroid="transparent"
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "height": 40,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": undefined,
            "style": Object {
              "flex": 1,
              "fontSize": 18,
              "paddingLeft": 20,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "allowFontScaling": true,
            "autoCorrect": false,
            "onChangeText": undefined,
            "placeholder": undefined,
            "secureTextEntry": undefined,
            "style": Object {
              "color": "#000",
              "flex": 2,
              "fontSize": 18,
              "lineHeight": 23,
              "paddingLeft": 5,
              "paddingRight": 5,
            },
            "underlineColorAndroid": "transparent",
            "value": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`renders correctly with some japanese character test input 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Input
    Input={
      Object {
        "value": "ドラゴンツリー",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Component
          style={
            Object {
              "flex": 1,
              "fontSize": 18,
              "paddingLeft": 20,
            }
          }
        />,
        <TextInput
          allowFontScaling={true}
          autoCorrect={false}
          style={
            Object {
              "color": "#000",
              "flex": 2,
              "fontSize": 18,
              "lineHeight": 23,
              "paddingLeft": 5,
              "paddingRight": 5,
            }
          }
          underlineColorAndroid="transparent"
        />,
      ],
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "height": 40,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": undefined,
          "style": Object {
            "flex": 1,
            "fontSize": 18,
            "paddingLeft": 20,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "allowFontScaling": true,
          "autoCorrect": false,
          "onChangeText": undefined,
          "placeholder": undefined,
          "secureTextEntry": undefined,
          "style": Object {
            "color": "#000",
            "flex": 2,
            "fontSize": 18,
            "lineHeight": 23,
            "paddingLeft": 5,
            "paddingRight": 5,
          },
          "underlineColorAndroid": "transparent",
          "value": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "flex": 1,
                "fontSize": 18,
                "paddingLeft": 20,
              }
            }
          />,
          <TextInput
            allowFontScaling={true}
            autoCorrect={false}
            style={
              Object {
                "color": "#000",
                "flex": 2,
                "fontSize": 18,
                "lineHeight": 23,
                "paddingLeft": 5,
                "paddingRight": 5,
              }
            }
            underlineColorAndroid="transparent"
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "height": 40,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": undefined,
            "style": Object {
              "flex": 1,
              "fontSize": 18,
              "paddingLeft": 20,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "allowFontScaling": true,
            "autoCorrect": false,
            "onChangeText": undefined,
            "placeholder": undefined,
            "secureTextEntry": undefined,
            "style": Object {
              "color": "#000",
              "flex": 2,
              "fontSize": 18,
              "lineHeight": 23,
              "paddingLeft": 5,
              "paddingRight": 5,
            },
            "underlineColorAndroid": "transparent",
            "value": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`renders correctly with some random test input 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Input
    Input={
      Object {
        "value": "TestInput",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Component
          style={
            Object {
              "flex": 1,
              "fontSize": 18,
              "paddingLeft": 20,
            }
          }
        />,
        <TextInput
          allowFontScaling={true}
          autoCorrect={false}
          style={
            Object {
              "color": "#000",
              "flex": 2,
              "fontSize": 18,
              "lineHeight": 23,
              "paddingLeft": 5,
              "paddingRight": 5,
            }
          }
          underlineColorAndroid="transparent"
        />,
      ],
      "style": Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "height": 40,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": undefined,
          "style": Object {
            "flex": 1,
            "fontSize": 18,
            "paddingLeft": 20,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "allowFontScaling": true,
          "autoCorrect": false,
          "onChangeText": undefined,
          "placeholder": undefined,
          "secureTextEntry": undefined,
          "style": Object {
            "color": "#000",
            "flex": 2,
            "fontSize": 18,
            "lineHeight": 23,
            "paddingLeft": 5,
            "paddingRight": 5,
          },
          "underlineColorAndroid": "transparent",
          "value": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component
            style={
              Object {
                "flex": 1,
                "fontSize": 18,
                "paddingLeft": 20,
              }
            }
          />,
          <TextInput
            allowFontScaling={true}
            autoCorrect={false}
            style={
              Object {
                "color": "#000",
                "flex": 2,
                "fontSize": 18,
                "lineHeight": 23,
                "paddingLeft": 5,
                "paddingRight": 5,
              }
            }
            underlineColorAndroid="transparent"
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "height": 40,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": undefined,
            "style": Object {
              "flex": 1,
              "fontSize": 18,
              "paddingLeft": 20,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "allowFontScaling": true,
            "autoCorrect": false,
            "onChangeText": undefined,
            "placeholder": undefined,
            "secureTextEntry": undefined,
            "style": Object {
              "color": "#000",
              "flex": 2,
              "fontSize": 18,
              "lineHeight": 23,
              "paddingLeft": 5,
              "paddingRight": 5,
            },
            "underlineColorAndroid": "transparent",
            "value": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
